# the_embedder

./: .claude.json  .claude.json.backup  .gitconfig  .gitignore  ARCHITECTURE.md  README.md  docker-compose.yml
.codex/: version.json
docs/: rag-embedder-usage.md
helm-chart/: Chart.yaml  README.md  values.yaml
helm-chart/templates/: NOTES.txt  _helpers.tpl  rag-connector-configmap.yaml  rag-connector-deployment.yaml  rag-connector-ingress.yaml  rag-connector-service.yaml
k8s/k8s-job-templates/: .env.template  README.md  create-collection-job-repo-test.yaml  create-collection-job-something-test.yaml  create-collection-job.yaml  upload-file-job.yaml  upload-repo-job-test-aws.yaml  (+3 more)
openwebui-deployment/: docker-compose.yml  filter-rag.py  rag-pipeline.py
rag-connector/: .env.example  DEBUGGING.md  Dockerfile  README.md  docker-compose.yml  get_context.py  main.py  pipeline-test.py  rag_my_query.py
rag_embedder/: .env-qwen  .env.example  ARCHITECTURE.md  DOCKER_USAGE.md  DOCKER_WORKER_USAGE.md  Dockerfile  FAQ.md  README.md  example_job_submission.py  requirements-debloated.txt  requirements-runtimes.txt  requirements.txt
rag_in_aws/: ARCHITECTURE.md  README.md
terragrunt/: backend.tf  provider.tf  terragrunt.hcl
the_chunker/: CHANGELOG_LIGHTWEIGHT_TOKENIZER.md  README.md  TOKENIZER_MIGRATION.md  TOKENIZER_STRATEGY.md  pyproject-bloated.toml  pyproject-debloated1.toml  pyproject.toml  requirements-debloated.txt  requirements.txt
the_chunker/src/the_chunker/chunking/: chunker_config.py  dispatcher.py  fallback_chunker.py  read_file_content.py  tokenizer.py  tokenizer_fetcher.py
(+117 files in other folders)
